--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/image-url": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "lucide-react": "^0.378.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.1",
